--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   padding: 0;
 }
 
+body{
+  background-color: rgb(249, 249, 249);
+}
+
 .navbar {
   width: 100%;
   background-image: linear-gradient(to right, rgb(134, 71, 19) , rgb(240, 119, 6));
@@ -44,5 +48,43 @@
 .btm{
   padding: 10px;
   margin: 0  10px  ;
-  font-size: xx-large;
+  font-size: larger;
+}
+
+.conte{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cards{
+  width: 20rem;
+  margin: 20px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  
+
+}
+
+.card-body{
+  margin: 0 30px;
+}
+
+.imag{
+  width: auto;
+  height: auto;
+  max-width: 250px;
+  max-height: 250px;
+
+  margin: 5%;
+}
+
+.detalles{
+  background-color: gray;
+  border: transparent;
+  color: white;
+  padding: 3px 30px;
+  margin: 10px 0;
 }
